Tue Mar  2 15:08:39 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Fixed code generation in the body of an operation. This 
          body just delegates to the executor, so we have to
          generate the argument list again (just the names, not
          the types), but we don't have to generate the raises
          list again. The front end Traversal raises() method
          was getting executed, no code generated, but it was
          picking up the overridden comma() method used for the
          arg list. So we had to override raises() itself to
          do nothing. Thanks to Boris for his help with this.

Tue Mar  2 01:34:18 2004  Tao Lu  <lu@dre.vanderbilt.edu>

        * DnC/Node:
	* DnC/Node/NodeApplication_Impl.h:
	* DnC/Node/NodeApplication_Impl.h:

	  Added the prototype definition files of
	  NodeApplication and NodeApplicationManager.

Sun Feb 29 20:57:40 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tools/static_configurator/Static_Configurator.h:
	* tools/static_configurator/Static_Configurator.cpp:
	* tools/static_configurator/Static_Assembly_Parser.cpp: Fixed
	  compile errors in builds with native exceptions disabled.

	* tools/static_configurator/Static_Assembly_Visitors.cpp: Fixed
	  compile errors in gcc 3.3.2. Thanks to Bala for pointing out.

Sat Feb 28 15:42:22 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tools/static_configurator/Static_Assembly_Visitors.cpp:

	  Fixed a couple of small errors. But this file still doeasn't
	  compile with gcc 3.3.2. Sending Venkita note.

Fri Feb 27 11:35:41 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Fixed code generation errors reported by Edward Mulholland
          <emulholl@atl.lmco.com>.

Thu Feb 26 14:21:48 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAOTAO.mwc:

	  An mwc file for CIAO with its dependencies on ACE+TAO. Folks can